--- a/sources/src/sass/main.sass
+++ b/sources/src/sass/main.sass
@@ -32,4 +32,10 @@
 
 @import "./blocks/production_more"
 
+@import "./blocks/intro_recipe_item"
+
+@import "./blocks/dish"
+
+@import "./blocks/cooking_process"
+
 @import "./blocks/footer"
