--- a/sources/src/sass/base/_layout.scss
+++ b/sources/src/sass/base/_layout.scss
@@ -25,6 +25,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: $font_text;
   color: $color_grey;
+  background-color: $color_white;
 }
 
 body.lock {
