--- a/sources/src/sass/blocks/news.scss
+++ b/sources/src/sass/blocks/news.scss
@@ -1,6 +1,7 @@
 .news {
   position: relative;
   width: 100%;
+  min-width: 320px;
   padding: 255px 0 250px;
   background-color: $color_brown_light;
 
@@ -54,7 +55,6 @@
     display: block;
     margin-bottom: 25px;
     color: $color_brown;
-
     font-size: 54px;
     line-height: 148%;
   }
@@ -284,5 +284,118 @@
 
   @include xs {
     width: 100%;
+  }
+}
+
+// news-page
+
+.news-page {
+  .news {
+    padding: 260px 0 250px;
+
+    @include xs {
+      padding: 158px 0 60px;
+    }
+  }
+
+  .news__title {
+    margin-bottom: 38px;
+    font-family: $font_title;
+    font-weight: 400;
+    font-size: 88px;
+    line-height: 91%;
+    text-align: center;
+
+    span {
+      &:nth-child(2) {
+        display: none;
+      }
+    }
+
+    @include sm {
+      font-size: 80px;
+    }
+
+    @include xs {
+      display: block;
+      margin-bottom: 25px;
+      color: $color_brown;
+      font-size: 54px;
+      line-height: 148%;
+
+      span {
+        &:nth-child(1) {
+          display: none;
+        }
+
+        &:nth-child(2) {
+          display: block;
+        }
+      }
+    }
+  }
+
+  .news__subtitle {
+    max-width: 720px;
+    margin: 0 auto 45px;
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
+    color: #35383f;
+
+    @include xs {
+      display: none;
+    }
+  }
+
+  .news__filter_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .news__filter {
+    @include xs {
+      display: flex;
+      justify-content: flex-start;
+      gap: 19px;
+      margin-right: -15px;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+
+      &::after {
+        content: "|";
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .news__btn {
+        scroll-snap-align: start;
+      }
+    }
+  }
+
+  .news__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 84px 29px;
+    margin-bottom: 83px;
+
+    @include lg {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include xs {
+      grid-template-columns: 1fr;
+      gap: 31px 0;
+      margin-bottom: 29px;
+    }
+  }
+
+  .recepies__item {
+    &:nth-child(n) {
+      grid-column-start: unset;
+      grid-column-end: unset;
+    }
   }
 }
