feat: complete news-item page

--- a/sources/src/sass/base/general.scss
+++ b/sources/src/sass/base/general.scss
@@ -280,6 +280,10 @@
   background-color: #f79b2f;
 }
 
+.label_orange_light {
+  background-color: #ffdfc9;
+}
+
 .label_cherry {
   background-color: #aa0080;
 }
