--- a/sources/src/sass/main.sass
+++ b/sources/src/sass/main.sass
@@ -38,4 +38,8 @@
 
 @import "./blocks/cooking_process"
 
+@import "./blocks/news_item"
+
+@import "./blocks/news_other"
+
 @import "./blocks/footer"
