feat: complete partnership page

--- a/sources/src/sass/blocks/where_to_buy.scss
+++ b/sources/src/sass/blocks/where_to_buy.scss
@@ -191,3 +191,15 @@
     }
   }
 }
+
+// company-page
+
+.company-page {
+  .where_to_buy {
+    padding: 31px 0 170px;
+
+    @include xs {
+      padding: 31px 0 73px;
+    }
+  }
+}
