--- a/sources/src/sass/main.sass
+++ b/sources/src/sass/main.sass
@@ -42,4 +42,14 @@
 
 @import "./blocks/news_other"
 
+@import "./blocks/company"
+
+@import "./blocks/awards"
+
+@import "./blocks/sertificats"
+
+@import "./blocks/partnership"
+
+@import "./blocks/contact_us"
+
 @import "./blocks/footer"
