--- a/sources/src/sass/blocks/contact_us.scss
+++ b/sources/src/sass/blocks/contact_us.scss
@@ -171,6 +171,9 @@
   }
 }
 
-.partnership-page main {
-  overflow: hidden;
+.partnership-page,
+.contacts-page {
+  & main {
+    overflow: hidden;
+  }
 }
