refactor: fix warrnings from validator and lighthouse

--- a/sources/src/pug/blocks/_footer.pug
+++ b/sources/src/pug/blocks/_footer.pug
@@ -2,5 +2,5 @@ footer.footer
     .container.footer__container
         p.footer__copyright © 2024 ООО  "Кубанские хлебцы"
         a.footer__created_by(href="https://art6.ru/" target="_blank")
-            img(src="./images/art6.svg" alt="ART6")
+            img(src="./images/art6.svg" alt="ART6" width="186" height="234")
         a.footer__policy(href="#") Политика конфиденциальности
