--- a/sources/src/pug/blocks/contact_us_block.pug
+++ b/sources/src/pug/blocks/contact_us_block.pug
@@ -19,7 +19,7 @@ section.contact_us
 
                 input.contact_us__input(type="text" name="user_phone" placeholder="Ваш телефон")
 
-                textarea.contact_us__textarea(name="user_message" placeholder="Сообщение" row="4")
+                textarea.contact_us__textarea(name="user_message" placeholder="Сообщение")
 
             
             button.contact_us__submit.btn.btn_blue_dark(type="submit") Отправить данные
