--- a/sources/src/pug/news-item.pug
+++ b/sources/src/pug/news-item.pug
@@ -81,16 +81,16 @@ block page
                     p Основными причинами решения о правильном питании стали лишний вес (31%), проблемы с пищеварением (29%) и постоянное чувство усталости (22%). Среди причин, по которым каждому второму (65%) россиянину так и не удалось отказаться от вредных продуктов, выделились следующие: каждый третий (39%) слишком сильно привык к своему прежнему рациону, 14% признались, что слишком любят «вредные» продукты, чтобы отказаться от них так просто, а 12% назвали задачу слишком сложной.
 
 
-                ul.description__social 
-                    li.description__link
-                        a(href="#")
-                            include ./blocks/icon_vk
-                    li.description__link
-                        a(href="#")
-                            include ./blocks/icon_telegram
-                    li.description__link
-                        a(href="#")
-                            include ./blocks/icon_link
+            ul.description__social 
+                li.description__link
+                    a(href="#" aria-label="Перейти на страницу вконтакте" target="_blank")
+                        include ./blocks/icon_vk
+                li.description__link
+                    a(href="#" aria-label="Перейти в телеграм" target="_blank")
+                        include ./blocks/icon_telegram
+                li.description__link
+                    a(href="#" aria-label="Перейти по ссылке" target="_blank")
+                        include ./blocks/icon_link
 
 
 
