--- a/sources/src/pug/products.pug
+++ b/sources/src/pug/products.pug
@@ -140,7 +140,7 @@ block page
                     .goods__item 
                         .goods__pic
                             .goods__label.label(class= good.labelClass)= good.labelName
-                            +picture(good.imgUrl, 'png', 'x2')
+                            +pictureSize(good.imgUrl, 'png', 'x2', 464, 325)
 
                         .goods__name= good.name
 
