--- a/sources/src/pug/recepies.pug
+++ b/sources/src/pug/recepies.pug
@@ -98,11 +98,11 @@ block page
                         .recipes__info
                             .recipes__time 
                                 .recipes__icon
-                                    img(src="./images/time.svg" alt="")
+                                    img(src="./images/time.svg" alt="" width="28" height="28")
                                 span.recipes__value 20 минут
                             .recipes__level
                                 .recipes__icon
-                                    img(src="./images/hat.svg" alt="")
+                                    img(src="./images/hat.svg" alt="" width="28" height="28")
                                 span.recipes__value Средняя сложность
 
                         h3.recipes__name Хлебцы с рикоттой, клубничным вареньем и клубникой
