--- a/sources/src/pug/base/_mixins.pug
+++ b/sources/src/pug/base/_mixins.pug
@@ -32,6 +32,17 @@ mixin pictureSize(name,ext,x2,width,height)
             img.picture__img.object-fit-cover(src="images/" + name + "." + ext srcset="images/" + name + "." + ext + ", images/" + name + "@2x." + ext + " 2x" alt="" width= width height= height loading="lazy")
 
 
+mixin pictureSizeWithoutLazy(name,ext,x2,width,height)
+    if !x2
+        picture.picture.object-fit-cover
+            source.object-fit-cover(srcset="images/" + name + ".webp" type="image/webp")
+            img.picture__img.object-fit-cover(src="images/" + name + "." + ext alt="" width= width height= height)
+    else
+        picture.picture.object-fit-cover
+            source.object-fit-cover(srcset="images/" + name + ".webp, images/" + name + "@2x.webp 2x" type="image/webp")
+            img.picture__img.object-fit-cover(src="images/" + name + "." + ext srcset="images/" + name + "." + ext + ", images/" + name + "@2x." + ext + " 2x" alt="" width= width height= height)
+
+
 mixin pictureNew(name, ext, altText, big_size, mid_size, sm_size, width, height, customClass)
     -
         var sourceSrcset = `images/${name}_${sm_size}.webp ${sm_size}w, images/${name}_${mid_size}.webp ${mid_size}w, images/${name}_${big_size}.webp ${big_size}w`
