--- a/sources/src/sass/blocks/awards.scss
+++ b/sources/src/sass/blocks/awards.scss
@@ -129,9 +129,9 @@
     width: 132px;
     height: 132px;
 
-    &:nth-child(n + 5) {
-      display: none;
-    }
+    // &:nth-child(n + 5) {
+    //   display: none;
+    // }
   }
 }
 
