--- a/sources/src/sass/blocks/sertificats.scss
+++ b/sources/src/sass/blocks/sertificats.scss
@@ -93,8 +93,8 @@
     width: 158px;
     height: 223px;
 
-    &:nth-child(n + 5) {
-      display: none;
-    }
+    // &:nth-child(n + 5) {
+    //   display: none;
+    // }
   }
 }
