--- a/sources/src/sass/blocks/fullscreen.scss
+++ b/sources/src/sass/blocks/fullscreen.scss
@@ -42,6 +42,7 @@
   z-index: 2;
   height: 90%;
   width: 90%;
+  max-width: 650px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,6 +52,9 @@
 .fullscreen__wrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow-y: auto;
 }
 
@@ -84,6 +88,8 @@
 }
 
 .fullscreen__img {
+  width: 100%;
+
   img {
     display: block;
     width: 100%;
