fix: fix footer, improve modal

--- a/sources/src/pug/blocks/fullscreen.pug
+++ b/sources/src/pug/blocks/fullscreen.pug
@@ -1,8 +1,9 @@
 .fullscreen
     .fullscreen__overlay.fullscreen-close
-    .fullscreen__close.fullscreen-close
-        include ./icon_close
-    .fullscreen__container
-        .fullscreen__wrapper
-            .fullscreen__img
-                img(src="" alt="")
+    .fullscreen__inner
+        .fullscreen__close.fullscreen-close
+            include ./icon_close
+        .fullscreen__container
+            .fullscreen__wrapper
+                .fullscreen__img
+                    img(src="" alt="")
