--- a/sources/src/sass/blocks/fullscreen.scss
+++ b/sources/src/sass/blocks/fullscreen.scss
@@ -101,10 +101,12 @@
 
 .fullscreen__img {
   width: 100%;
+  height: 100%;
 
   img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 }
